--- a/CosmicRaysRadiation/jupyter.ipynb
+++ b/CosmicRaysRadiation/jupyter.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def puasson(mean, value):\n",
+    "def Poisson(mean, value):\n",
     "    return (mean ** value) * np.exp(-mean) / factorial(value)"
    ]
   },
@@ -620,7 +620,7 @@
     "plt.figure(figsize = (10, 7))\n",
     "plt.title(\"Muons Distribution\")\n",
     "plt.bar(x, y, label = 'Data Distribution')\n",
-    "plt.bar(x, puasson(12.5, x), color = 'g', label = 'Puasson Distribution')\n",
+    "plt.bar(x, Poisson(12.5, x), color = 'g', label = 'Poisson Distribution')\n",
     "plt.xlabel(\"Amount of particles\")\n",
     "plt.ylabel(\"Possibility of beign detected\")\n",
     "plt.grid(alpha = 0.5)\n",
@@ -763,7 +763,7 @@
     "plt.figure(figsize = (10, 7))\n",
     "plt.title(\"Muons Distribution\")\n",
     "plt.bar(x_2, y_2, label = 'Data Distribution')\n",
-    "plt.bar(x_2, puasson(12.5, x_2), color = 'g', label = 'Puasson Distribution')\n",
+    "plt.bar(x_2, Poisson(12.5, x_2), color = 'g', label = 'Poisson Distribution')\n",
     "plt.xlabel(\"Amount of particles\")\n",
     "plt.ylabel(\"Possibility of beign detected\")\n",
     "plt.grid(alpha = 0.5)\n",
@@ -814,7 +814,7 @@
     "plt.figure(figsize = (10, 7))\n",
     "plt.title(\"Muons Distribution\")\n",
     "plt.bar(x_3, y_3, label = 'Data Distribution')\n",
-    "plt.bar(x_3, puasson(12.5, x_3), color = 'g', label = 'Puasson Distribution')\n",
+    "plt.bar(x_3, Poisson(12.5, x_3), color = 'g', label = 'Poisson Distribution')\n",
     "plt.xlabel(\"Amount of particles\")\n",
     "plt.ylabel(\"Possibility of beign detected\")\n",
     "plt.grid(alpha = 0.5)\n",
@@ -942,7 +942,7 @@
     "plt.figure(figsize=(10, 7))\n",
     "plt.title(\"The Distribution of Particles\")\n",
     "plt.bar(machine_data['n(40)'], machine_data['w'], label = 'Data Distribution')\n",
-    "plt.plot(machine_data['n(40)'], puasson(50, machine_data['n(40)'].to_numpy().astype(float)), color = 'g', label = 'Puasson Distribution')\n",
+    "plt.plot(machine_data['n(40)'], Poisson(50, machine_data['n(40)'].to_numpy().astype(float)), color = 'g', label = 'Poisson Distribution')\n",
     "plt.grid(alpha = 0.2)\n",
     "plt.xlabel(\"Amount of Particles Detected\")\n",
     "plt.ylabel(\"How much times detected\")\n",
@@ -1063,8 +1063,8 @@
     "plt.figure(figsize=(10, 7))\n",
     "plt.title(\"The Distribution of Particles\")\n",
     "plt.bar(machine_data_2['n(20)'], machine_data_2['w'], label = 'Data Distribution')\n",
-    "plt.bar(machine_data_2['n(20)'], puasson(24, machine_data_2['n(20)'].to_numpy().astype(float)), color = 'g', label = 'Puasson Distribution')\n",
-    "#plt.plot(machine_data_2['n(20)'], chi_squared_probability_density(puasson(24, machine_data_2['n(20)'].to_numpy().astype(float)) - machine_data_2['n(20)'], k = 22), color = 'r', label = 'Chi-2 Distribution')\n",
+    "plt.bar(machine_data_2['n(20)'], Poisson(24, machine_data_2['n(20)'].to_numpy().astype(float)), color = 'g', label = 'Poisson Distribution')\n",
+    "#plt.plot(machine_data_2['n(20)'], chi_squared_probability_density(Poisson(24, machine_data_2['n(20)'].to_numpy().astype(float)) - machine_data_2['n(20)'], k = 22), color = 'r', label = 'Chi-2 Distribution')\n",
     "plt.grid(alpha = 0.2)\n",
     "plt.xlabel(\"Amount of Particles Detected\")\n",
     "plt.ylabel(\"How much times detected\")\n",
